--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Neuvillette's Website</title>
+    <title>This is a site</title>
 </head>
 <body>
     <h1>Welcome !!!</h1>
